--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
   }
