--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,7 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.20",
     "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@types/classnames": "^2.2.11",
     "@types/uuid": "^8.3.0",
     "autoprefixer": "^9",
     "eslint-plugin-prettier": "^3.3.1",
