--- a/app/package.json
+++ b/app/package.json
@@ -62,5 +62,8 @@
     "postcss": "^7",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  },
+  "chat": {
+    "appName": "actyx"
   }
 }
