--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@actyx-contrib/react-pond": "^2.0.2",
     "@actyx/pond": "^2.4.1",
     "@craco/craco": "^6.1.1",
     "@tailwindcss/forms": "^0.2.1",
@@ -23,11 +24,12 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "yarn check-deps & craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "check-deps": "madge --circular src"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +61,7 @@
     "@types/uuid": "^8.3.0",
     "autoprefixer": "^9",
     "eslint-plugin-prettier": "^3.3.1",
+    "madge": "^4.0.2",
     "postcss": "^7",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
